# acronym_db

./: .gitignore  Cargo.toml  README.md
data/: db.yaml
designs/: TODO.md  cli.md  db.md  db.yaml  overview.md  tui.md
src/: cli.rs  db.rs  main.rs
