[package]
name = "adb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
serde_yaml = "0.9.17"
tempfile = "3.8.1"
